--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Inconsolata', monospace; */
 }
 
 body {
@@ -12,6 +13,10 @@ body {
   font-size: 1rem;
   color: #59dcff;
   background-color: #202020;
+  overflow: hidden;
+  height: auto;
+  width: 100%;
+  max-width: 100vw;
 }
 
 * {
