--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
 body {
   font-weight: 500;
   font-size: 1rem;
-  color: #59dcff;
+  color: #ff6022;
   background-color: #202020;
   overflow: hidden;
   height: auto;
